# VapourSynth-ICCConvert

./: .gitmodules  LICENSE  README.md  hatch_build.py  manifest.vs  meson.build  pyproject.toml
.github/workflows/: windows.yml
_msvc/: .gitignore  VapourSynth-ICCConvert.sln
_msvc/iccc/: iccc.vcxproj  iccc.vcxproj.filters
_msvc/iccc_magick/: iccc_magick.vcxproj  iccc_magick.vcxproj.filters
src/: 1886.cc  common.hpp  extract.cc  icc_detection.c  iccc.cc  plugin.cc
src/detection/: cocoa.m  colord.c  macos.c  win32.c  x11.c
src/magick/: magick.cc  magick.hpp
src/vapoursynth/: VSConstants4.h  VSHelper4.h  VSScript4.h  VapourSynth4.h
